--- a/artportfolio.html
+++ b/artportfolio.html
@@ -7,12 +7,12 @@
   <body>
     <h1>Arts and Design</h1>
     <h3>Blender</h3>
-    <img src="donut1s.png" alt="donut" width="192" height="108">
-    <img src="sculpt.png" alt="sculpt" width="192" height="108">
-    <img src="untitled.png" alt="flask" width="192" height="108"><br>
+    <img src="images/donut1s.png" alt="donut" width="192" height="108">
+    <img src="images/sculpt.png" alt="sculpt" width="192" height="108">
+    <img src="images/untitled.png" alt="flask" width="192" height="108"><br>
     <br>
     <hr>
     <h3>Inkscape</h3>
-    <img src="g311.png" alt="logo" width="164" height="164">
+    <img src="images/g311.png" alt="logo" width="164" height="164">
   </body>
 </html>
