--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="utf-8">
     <title>Welcome to my Website</title>
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
-    <link rel="icon" href="favicon.ico" type="image/x-icon">
+    <link rel="icon" href="images/favicon.ico" type="image/x-icon">
   </head>
   <body>
-    <img src="IMG_1555.JPG" alt="my photo" width="518" height="345">
+    <img src="images/IMG_1555.JPG" alt="my photo" width="518" height="345">
     <h1>Akif Azman</h1>
     <p><em>Electrical and Information Technology Engineer from <strong>University of Applied Sciences Aschaffenburg</strong>.</em></p>
     <p>I am a graduate with experience in <strong>C++, Python, and Matlab</strong>. Currently seeking jobs.</p>
