--- a/contactme.html
+++ b/contactme.html
@@ -3,13 +3,17 @@
   <head>
     <meta charset="utf-8">
     <title>Contact Me</title>
+    <link rel="icon" href="images/favicon.ico">
+    <link rel="stylesheet" href="css/styles.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Petit+Formal+Script&family=Marck+Script&family=Merriweather&family=Montserrat&display=swap" rel="stylesheet">
   </head>
   <body>
     <h1>My Contact Details</h1>
     <ul>
       <li>www.akifazman.github.io</li>
       <li>www.akifazman.linkedin.com</li>
-      <li>+60171234124</li>
+      <li>+60142591705</li>
     </ul>
 
     <form action="mailto:akifazman@gmail.com" method="post" enctype="text/plain">
@@ -21,6 +25,8 @@
       <textarea name="yourMessage" rows="10" cols="30"></textarea><br>
       <input type="submit" name="">
     </form>
+
+    <h2><a class="btn" href="https://akifazman.github.io/cv/">Home</a></h2>
 
   </body>
 </html>
