--- a/index.html
+++ b/index.html
@@ -1,37 +1,78 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>Welcome to my Website</title>
-    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
-    <link rel="icon" href="images/favicon.ico" type="image/x-icon">
-  </head>
-  <body>
-    <img src="images/IMG_1555.JPG" alt="my photo" width="518" height="345">
-    <h1>Akif Azman</h1>
-    <p><em>Electrical and Information Technology Engineer from <strong>University of Applied Sciences Aschaffenburg</strong>.</em></p>
-    <p>I am a graduate with experience in <strong>C++, Python, and Matlab</strong>. Currently seeking jobs.</p>
-    <hr>
-    <h3>Projects and Interests</h3>
-    <h4><b>Projects</b></h4>
-    <ul>
-      <li>Data Analysis on House Prices</li>
-      <li>Data Analysis on Nobel Prize Winner</li>
-      <li>Weather SMS Notification</li>
-    </ul>
-    <h4>Interests</h4>
-    <ul>
-      <li>Data Science</li>
-      <li>Machine Learning and Artificial Intelligence</li>
-      <li>Web Development</li>
-    </ul>
-    <hr>
-    <h3>My Hobbies</h3>
-    <ol>
-      <li><a href="artportfolio.html">Computer Graphics:</a> <strong>Blender, Inkscape and Gimp</strong></li>
-      <li>Bowling and Football</li>
-      <li>Arts and Design</li>
-    </ol>
-    <h3><a href="contactme.html">Contact me!</a></h3>
-  </body>
+
+<head>
+  <meta charset="utf-8">
+  <title>Welcome to my Website</title>
+  <link rel="icon" href="images/favicon.ico">
+  <link rel="stylesheet" href="css/styles.css">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Petit+Formal+Script&family=Marck+Script&family=Merriweather&family=Montserrat&display=swap" rel="stylesheet">
+</head>
+
+<body>
+  <div class="top-container">
+    <img class="top-cloud" src="images/cloud.png" alt="cloud">
+    <h1>I'm Akif Azman</h1>
+      <p class ="main-text">Electrical and Information Technology Engineer from <strong>University of Applied Sciences Aschaffenburg</strong></p>
+      <p class="main-text">I am a graduate with experience in <strong>C++, Python, and Matlab</strong></p>
+
+    <img class="bottom-cloud" src="images/cloud.png" alt="cloud">
+    <img src="images/mountain.png" alt="mountain">
+    <br>
+  </div>
+  <div class="middle-container">
+    <div class="projects">
+      <h2>Projects and Interests</h2>
+      <div class="projects-desc">
+        <img style="border-radius:300px;" class="computer-img" src="images/computer.png" alt="code">
+
+        <h3><b>Projects</b></h3>
+        <ul>
+          <li>Data Analysis on House Prices</li>
+          <li>Data Analysis on Nobel Prize Winner</li>
+          <li>Weather SMS Notification</li>
+        </ul>
+
+        <h3>Interests</h3>
+        <ul>
+          <li>Data Science</li>
+          <li>Machine Learning and Artificial Intelligence</li>
+          <li>Web Development</li>
+        </ul>
+
+      </div>
+
+    </div>
+<hr>
+    <div class="hobbies">
+      <h2><a href="artportfolio.html">Hobbies</a></h2>
+      <div class="hobbies-desc">
+
+        <img class="bowl" src="images/bowling.png" alt="bowl">
+        <h3>My Hobbies</h3>
+        <ul>
+          <li>Computer Graphics: <strong>Blender, Inkscape and Gimp</strong></li>
+          <li>Bowling and Football</li>
+          <li>Arts and Design</li>
+        </ul>
+      </div>
+    </div>
+<hr style="margin-bottom: 50px;">
+    <div class="contact">
+      <h2><a class="btn" href="contactme.html">Contact Me</a></h2>
+    </div>
+
+  </div>
+  <div class="bottom-container">
+
+    <a class="footer-link" href="https://www.linkedin.com/in/akifazman23">LinkedIn</a>
+    <a class="footer-link" href="https://twitter.com/">Twitter</a>
+    <a class="footer-link" href="https://akifazman.github.io/cv/">Website</a>
+    <p style="font-size: 0.8rem; color: #eaf6f6; padding-top: 10px;">© 2021 Akif Azman.</p>
+
+  </div>
+
+</body>
+
 </html>
